--- a/P1/CV/index.css
+++ b/P1/CV/index.css
@@ -36,7 +36,7 @@ h1 {
     font-size: 50px;
     color: whitesmoke;
     text-shadow: 3px 3px 3px black;
-    align-content: center;
+    text-align: center;
 
 }
 
