--- a/P2/boom.css
+++ b/P2/boom.css
@@ -25,7 +25,7 @@ body {
     column-gap: 30px;
 }
 
-.codigo {
+.codigo.on {
     color:green;
     transform: scale(2);
     transition: .165s all;
