--- a/P4/memory.css
+++ b/P4/memory.css
@@ -100,6 +100,9 @@ button {
 }
 
 .win {
+    box-shadow: 0 25px 50px rgb(20, 20, 20/ 15%);
+    backface-visibility: hidden;
+    transition: cubic-bezier(0.4, 0.0, 0.2, 1);
     position: absolute;
     top: 0;
     left: 0;
