--- a/P4/memory.css
+++ b/P4/memory.css
@@ -109,8 +109,7 @@ button {
     width: 100%;
     height: 100%;
     text-align: center;
-    background: #fdf8e6;
-    transform: rotateY(180deg) rotateZ(50deg)
+    background: #a58821;
 }
 
 .win-text {
